Fix Header On Mobile
I had the li options in the wrong list so they did not appear when the
button toggle was selected. I updated this, pulled the cart button out
to the other list and added a show class to ensure its always
displaying. Then floated the list right to make it appear like it did
before.

--- a/app/assets/stylesheets/store/shared/header.scss
+++ b/app/assets/stylesheets/store/shared/header.scss
@@ -57,7 +57,7 @@ header.navigation {
     z-index: 9999999;
 
     @include media ($horizontal-bar-mode) {
-      float: left;
+      float: right;
     }
   }
 
